# hatoba

./: Cargo.toml  LICENSE  README.md  README_DEV.md  README_ja.md
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-enhancement.yml  02-bug.yml
.github/workflows/: ci.yml  release.yml
docs/: branch_rules.md  release.md  roadmap.md  spec.md  test.md
docs/feat/: 01_database.md
migrations/01-initial_schema/: up.sql
samples/: config.toml  config_en.toml  config_ja.toml
src/: cmd.rs  config.rs  db.rs  init.rs  main.rs  messages.rs  remove.rs  select.rs
src/cmd/: add.rs  default.rs  init.rs  lang.rs  list.rs  remove.rs  select.rs  swap.rs
