[package]
name = "hatoba"
version = "0.1.1"
edition = "2024"
authors = ["iidax <62173975+iidax@users.noreply.github.com>"]
description = "Select and jump to your favorite directories"
license = "MIT"
repository = "https://github.com/iidax/hatoba"
keywords = ["directory", "jump", "cli", "ssh", "interactive"]
categories = ["command-line-utilities", "development-tools::cli-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
toml = "1.1.2"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"
