[package]
name = "hatoba"
version = "0.1.2"
edition = "2024"
rust-version = "1.85.0"
authors = ["iidax <62173975+iidax@users.noreply.github.com>"]
description = "Select and jump to your favorite directories"
license = "MIT"
repository = "https://github.com/iidax/hatoba"
keywords = ["directory", "jump", "cli", "ssh", "interactive"]
categories = ["command-line-utilities", "development-tools::cli-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
include_dir = "0.7"
rusqlite = "0.39.0"
rusqlite_migration = { version = "=2.5.0", features = ["from-directory"] }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"
toml = "1.1.2"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"
